Add tests for enterButton,promtTextView, and userWordEditText.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".PlayActivity" />
+        <activity android:name=".ResultsActivity"></activity>
     </application>
 
 </manifest>
